# 100days-of-code-confluent-cloud-kafka

./: .gitignore  Cargo.toml  README.md
.github/workflows/: codeql.yml
day2/: README.md
day3/: README.md
day3/ksql/: rate-movies.sql
examples/: clap.rs
rust/producer-and-consumer/: Cargo.toml
rust/producer-and-consumer/src/: utils.rs
rust/twitter-consumer/: Cargo.toml
