[package]
authors = ["GRECO, FRANK <frank@confluent.io>"]
build = "build.rs"
edition = "2018"
name = "rust-kafka-client-example"
version = "0.1.0"

[dependencies]
clap = {version = "3.1.8", features = ["derive"]}
futures = "0.3.21"
tokio = "1.17.0"

rdkafka = {version = "0.28.0", features = ["cmake-build"]}

[[bin]]
name = "producer"
path = "src/producer.rs"

[[bin]]
name = "consumer"
path = "src/consumer.rs"
